# stanford-rna-3d-folding-2

./: .gitignore  AGENTS.md  CHANGES.md  EXPERIMENTS.md  PLANS.md  README.md  pyproject.toml  pytest.ini
assets/: README.md  SOURCES.md
benchmarks/: ARTICLE1_BASELINE.md  CASP16.md
configs/research/: default.yaml
docs/: SUBMARINO_RUNBOOK.md
experiments/: README.md
research/: README.md
scripts/: research_report.py  research_run_experiment.py  research_sync_literature.py  research_verify.py  rna3d_main_gpu.sh
tests/: conftest.py  test_alignment_biopython.py  test_assets_fetch.py  test_backbone_checkpointing.py  test_best_of5_strategy.py  test_candidate_pool.py  test_chai1_runner_chain_separator.py  test_chemical_features.py  test_chemical_mapping.py  test_cli_strict_surface.py  test_compute_backend.py  test_contracts.py  test_data_access.py  test_description_and_submission.py  test_diversity_rotation_invariance.py  test_drfold2_parser.py  test_encoder_torchscript.py  test_ensemble_dynamic.py  test_experiment_runner.py  test_experiments_runner_safe_predict.py  test_export_strict.py  test_gating.py  test_homology_eval.py  test_homology_folds.py  test_homology_folds_structural.py  test_ipa_geometry.py  test_kaggle_calibration.py  test_kaggle_oracle.py  test_kaggle_submissions.py  test_labels_parquet.py  test_memory_guardrails.py  test_minimization.py  test_mock_policy.py  test_model_confidence_extraction.py  test_msa_covariance.py  test_pairings.py  test_phase1_data_lab.py  test_phase2_assets.py  test_phase2_configs.py  test_phase2_hybrid.py  (+40 more)
(+131 files in other folders)
