[project]
name = "rna3d-local"
version = "0.1.0"
description = "Local dataset + strict submission validation + Kaggle-identical metric runner for Stanford RNA 3D Folding 2"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "polars>=0.20",
  "pyarrow>=12",
  "biopython>=1.86",
  "xxhash>=3.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
